fixing dark mode on users page

--- a/app/assets/stylesheets/components/_dark_mode.scss
+++ b/app/assets/stylesheets/components/_dark_mode.scss
@@ -230,4 +230,16 @@
     background-color: #202020;
     color: #B0B0B0;
   }
+
+  .stats {
+    h4 {
+      color: #616161;
+    }
+  }
+
+  .all-users {
+    .card {
+      background: #202020;
+    }
+  }
 }
